--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,8 @@
         "composer/ca-bundle": "^1.0",
         "ext-mbstring": "*",
         "jbinfo/mobile-detect-service-provider": "^1.1",
-        "twig/twig": "1.34.0"
+        "twig/twig": "1.34.0",
+        "ext-redis": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*",
