--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@ kramdown:
 
 # Third-party services
 # just leave someone empty to disable it
-# google_analytics:
+google_analytics: UA-26131879-4
 disqus_shortname:
 
 # used this for post_excerpt at index_page
